# nex2426

./: Cargo.toml  README.md  build.rs  cbindgen.toml  install.sh  test.txt.nex2426
DEBIAN/: control  postinst  postrm  prerm
benches/: benchmark_suite.rs
docs/: ANNOUNCEMENT.md  API.md  ARCHITECTURE.md  C_API.md  DEPLOYMENT.md  HARDWARE_INTEGRATION.md  SECURITY.md  SYSTEMVERILOG_SUMMARY.md  UPGRADE_ROADMAP.md
examples/: reproducible_demo.rs  secure_hash_demo.rs
include/: nex2426.h
src/: error.rs  kernel.rs  lib.rs  logging.rs  main.rs  memory_opt.rs  validation.rs
src/asm/: nex_core.s
src/audit/: blockchain_audit.rs  mod.rs  trail.rs
src/blockchain/: block.rs  chain.rs  consensus.rs  crypto.rs  mod.rs  storage.rs  transaction.rs
src/c_api/: mod.rs
src/compression/: rle.rs
src/examples/: blockchain_demo.rs
src/features/: api_server.rs  blockchain_api.rs  config.rs  logging.rs  mod.rs  utils.rs
src/hardware/: accelerator.rs  bridge.rs  memory_map.rs  mod.rs
src/integrity/: checksum.rs  ledger.rs  merkle.rs  mod.rs
src/kms/: hsm_sim.rscat  mod.rs  policy.rs  vault.rs
src/memory_hard/: constants.rs  mod.rs
src/nex_io/: buffer.rs  mod.rs  parallel.rs
src/protocol/: kx.rs  mod.rs  secure_channel.rs
src/quantum/: constants.rs  lattice.rs
src/security/: antidebug.rs  memory.rs  mod.rs
src/standards/: hmac.rs  kdf.rs  mod.rs  padding.rs  signatures.rs
src/transform/: mod.rs  stage1_expand.rs  stage2_binary.rs  stage3_reduce.rs  stage4_finalize.rs  stage5_temporal.rs  stage_chaos.rs  stage_memory.rs  (+1 more)
tests/: integration_tests.rs
(+188 files in other folders)
