[package]
name = "nex2426"
version = "0.1.0"
edition = "2024"
authors = ["NEX2426 Development Team <dev@nex2426.io>"]
description = "Quantum-Resistant Chaos Encryption Engine"
license = "MIT"
homepage = "https://github.com/nex2426/nex2426"
repository = "https://github.com/nex2426/nex2426"
readme = "docs/README.md"
keywords = ["cryptography", "encryption", "post-quantum", "security", "chaos"]
categories = ["cryptography", "command-line-utilities"]
rust-version = "1.85"

[dependencies]
rayon = "1.8"
num_cpus = "1.16"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
libc = "0.2"

[build-dependencies]
cc = "1.2.52"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
